gcc/testsuite/g++.dg/expr/sizeof1.C
// PR c++/12989

struct A
{
  int foo() { return sizeof(bar); } // { dg-error "" }
  int bar();
};
